--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "aframe": "^1.0.4",
+    "aos": "^3.0.0-beta.6",
     "core-js": "^3.6.4",
+    "gsap": "^3.2.6",
     "pug": "^2.0.4",
     "pug-filters": "^3.1.1",
     "pug-plain-loader": "^1.0.0",
@@ -21,6 +24,7 @@
     "@vue/cli-plugin-babel": "^4.3.0",
     "@vue/cli-plugin-eslint": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
+    "aframe-mouse-cursor-component": "^0.5.3",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
